<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/gradient_vertical"
            tools:ignore="ContentDescription"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/layout_high"
    >

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/overlock"
        />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_msg"
                android:textSize="@dimen/text_mid_size"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/overlock"
        />

    </LinearLayout>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/layout_low"
            android:text="@string/powered"
            android:textSize="@dimen/text_low_size"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/overlock"
    />

</RelativeLayout>